crates/normalize/tests/snapshots/cli_snapshots__help_generate_types.snap
---
source: crates/normalize/tests/cli_snapshots.rs
assertion_line: 391
expression: "snapshot_help(&[\"generate\", \"types\"])"
---
Generate types/validators from schema

Usage: normalize generate types [OPTIONS] [input]

Arguments:
  [input]  Input schema file (JSON Schema or OpenAPI), use - for stdin

Options:
  -b, --backend <backend>          Output backend
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
  -f, --format <format>            Input format (auto, json-schema, openapi, typescript)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
  -o, --output <output>            Output file or directory (stdout if not specified)
      --export <export>            Export all types (add 'export' keyword)
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --infer-types                Generate type inference (for Zod/Valibot)
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
      --readonly                   Make types readonly/frozen
      --package <package>          Package name (for Go)
      --dry-run                    Preview output without writing any files
      --split                      Emit one file per top-level type into the output directory (requires --output)
  -h, --help                       Print help

Examples:
normalize generate types schema.json -b typescript        # generate TypeScript types
normalize generate types schema.json -b zod --infer-types # Zod schemas with type inference
normalize generate types schema.json -b go --package models -o models.go
normalize generate types schema.json -b typescript --dry-run  # preview without writing
normalize generate types schema.json -b typescript --split -o types/  # one file per type
