crates/normalize/tests/snapshots/cli_snapshots__help_grammars_install.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"grammars\", \"install\"])"
---
Install grammars from GitHub release

Usage: normalize grammars install [OPTIONS]

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --version <version>          Specific version to install (default: this binary's version)
      --compact                    Compact output without colors (overrides TTY detection)
      --force                      Force reinstall even if grammars exist
      --json                       Output machine-readable JSON
      --dry-run                    Preview what would be installed without downloading
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize grammars install                    # install latest grammars
normalize grammars install --version v0.1.0   # install a specific version
normalize grammars install --force             # reinstall even if grammars exist
