crates/normalize/tests/snapshots/cli_snapshots__help_index.snap
---
source: crates/normalize/tests/cli_snapshots.rs
assertion_line: 47
expression: "snapshot_help(&[\"index\"])"
---
Manage file index

Usage: normalize index [OPTIONS] <COMMAND>

Commands:
  rebuild   Rebuild the file index
  stats     Show index statistics (DB size vs codebase size)
  files     List indexed files (with optional prefix filter)
  packages  Index external packages (stdlib, site-packages) into global cache
  help      Print this message or the help of the given subcommand(s)

Options:
  -r, --root <ROOT>         Root directory (defaults to current directory)
      --json                Output as JSON
      --jsonl               Output as JSON Lines (one object per line)
      --jq <EXPR>           Filter JSON output with jq expression (implies --json)
      --pretty              Human-friendly output with colors and formatting
      --compact             Compact output without colors (overrides TTY detection)
      --output-schema       Output JSON schema for the command's return type
      --input-schema        Output JSON schema for the command's input arguments
      --params-json <JSON>  Pass command arguments as JSON (overrides CLI args)
  -h, --help                Print help
