crates/normalize/tests/snapshots/cli_snapshots__help_index_files.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 164
expression: "snapshot_help(&[\"index\", \"files\"])"
---
List indexed files (with optional prefix filter)

Usage: moss index files [OPTIONS] [PREFIX]

Arguments:
  [PREFIX]  Filter files by prefix

Options:
  -l, --limit <LIMIT>  Maximum number of files to show [default: 100]
  -r, --root <ROOT>    Root directory (defaults to current directory)
      --json           Output as JSON
      --jq <EXPR>      Filter JSON output with jq expression (implies --json)
      --pretty         Human-friendly output with colors and formatting
      --compact        Compact output without colors (overrides TTY detection)
  -h, --help           Print help
